# task-processing

./: CMakeLists.txt  Dockerfile  docker-compose.yml
include/: consumer_manager.h  producer_manager.h  task.h  task_queue.h
src/: consumer_manager.cpp  main.cpp  producer_manager.cpp  task.cpp  task_queue.cpp
